# RTOS2023

./: README.md
assignments/ESP32/Test/: ESP32-1.code-workspace
assignments/ESP32/og_esp32_webserv/: drivers.cpp  (+1 more)
pico/: simple_freertos_README.txt
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/: CMakeCache.txt  CMakeLists.txt  Makefile  V3-7SEGTEST.dis  V3-7SEGTEST.elf  V3-7SEGTEST.elf.map  V3-7SEGTEST.hex  V3-7SEGTEST.uf2  main.c  main.h
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/elf2uf2/: CMakeCache.txt  elf2uf2
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/: cmake_install.cmake
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_async_context/: Makefile  cmake_install.cmake
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_btstack/: Makefile
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_cyw43_driver/: Makefile  cmake_install.cmake
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_cyw43_driver/cybt_shared_bus/: Makefile
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_i2c_slave/: Makefile
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_mbedtls/: Makefile
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pico-sdk/src/rp2_common/pico_rand/: Makefile
pico/Vandalino3PicoTestSuite/V3-7SEGTEST/pioasm/: CMakeCache.txt
pico/bigPico/: CMakeLists.txt
pico/simple_usb/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  hdc1080.c  simple_usb.dis  simple_usb.elf  simple_usb.elf.map  simple_usb.hex  simple_usb.uf2
(+149 files in other folders)
